# advent

./: .gitignore  Cargo.toml  README.md  cabal.project
2023/day1/haskell/: CHANGELOG.md
2023/day1/haskell/app/: Main.hs
2023/day1/rust/: Cargo.toml
2023/day1/rust/src/: main.rs
2023/day2/rust/src/: main.rs
2023/day3/rust/: Cargo.toml
2023/day3/rust/src/: main.rs
2023/day4/haskell/: aocday42023.cabal
2023/day4/haskell/app/: Main.hs
2023/day4/rust/: Cargo.toml
2023/day4/rust/src/: main.rs
2023/day5/rust/: Cargo.toml
Day_1/Rust/: Cargo.toml  test.txt
Day_1/Rust/src/: main.rs
day1/haskell/: aocday12023.cabal
day1/haskell/app/: Main.hs
day1/rust/src/: main.rs
day2/rust/: Cargo.toml
day2/rust/src/: main.rs
